# Translatorman

./: .gitignore  Doxyfile  README.txt  TODO.txt  resources.qrc
builds/CMake/: CMakeLists.txt
builds/Qtcreator/: Translatorman.pro
core/: CMakeLists.txt  man2html.c  tlconfiguration.h
core/libs/: CMakeLists.txt  main.cxx  tlfunctions.cpp
qt4/: CMakeLists.txt  abouttranslatorman.cpp  abouttranslatorman.h  abouttranslatorman.ui  lineedit.cpp  main.cxx  tmpreference.cpp  tmpreference.h  tmpreferencebase.ui  translatorman.cpp  translatorman.h  translatormanbase.ui
qt4/libs/: CMakeLists.txt  tldefs.h  tlfunctions.cpp  tlfunctions.h
templates/: template.cpp  template.h
